--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta
+    name="description"
+    content="Web site created using create-react-app"
+  />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <!--
+    manifest.json provides metadata used when your web app is installed on a
+    user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+  -->
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--
+    Notice the use of %PUBLIC_URL% in the tags above.
+    It will be replaced with the URL of the `public` folder during the build.
+    Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Help Me</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+    work correctly both with client-side routing and a non-root public URL.
+    Learn how to configure a non-root public URL by running `npm run build`.
+  -->
+  <title>Help Me</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  
+  <!-- Componente de instalação e balão de conversa -->
+  <div id="installComponent" class="chat-balloon">
+    <div>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+      <img src="./logo512.png" class="InstallLogo"/>
+    </div>
+    <div>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+      <span>Instale o aplicativo para uma melhor experiência!</span>
+      <div>
+        <button id="btnInstall" class="button install-button">Instalar</button>
+        <button id="btnClose" class="button close-button">Fechar</button>
+      </div>
+    </div>
+  </div>
+  
+  <!-- Seu JavaScript -->
+  <script>
+    // Função para fechar o componente de instalação
+    function closeInstallComponent() {
+      document.getElementById('installComponent').style.display = 'none';
+    }
+
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', function() {
+        navigator.serviceWorker.register('/service-worker.js').then(function(registration) {
+          console.log('Service Worker registrado com sucesso:', registration);
+        }, function(err) {
+          console.error('Erro ao registrar o Service Worker:', err);
+        });
+      });
+    }
+
+    // Exibe o componente de instalação e balão de conversa quando o evento 'beforeinstallprompt' é acionado
+    window.addEventListener('beforeinstallprompt', function(event) {
+      // Cancela o evento padrão para evitar que o navegador exiba o prompt de instalação
+      event.preventDefault();
+
+      // Armazena o evento para que você possa exibi-lo posteriormente
+      deferredPrompt = event;
+
+      // Mostra o componente de instalação e balão de conversa
+      document.getElementById('installComponent').style.display = 'grid';
+    });
+
+    // Código para quando o usuário clicar no botão de instalação
+    document.getElementById('btnInstall').addEventListener('click', function() {
+      // Mostra o prompt de instalação
+      deferredPrompt.prompt();
+      
+      // Aguarde o usuário interagir com o prompt de instalação
+      deferredPrompt.userChoice.then(function(choiceResult) {
+        if (choiceResult.outcome === 'accepted') {
+          console.log('O usuário aceitou a instalação');
+        } else {
+          console.log('O usuário recusou a instalação');
+        }
+        
+        // Limpa o evento armazenado, pois já foi usado
+        deferredPrompt = null;
+
+        // Fecha o componente de instalação e balão de conversa após a instalação
+        closeInstallComponent();
+      });
+    });
+
+    // Código para quando o usuário clicar no botão de fechar
+    document.getElementById('btnClose').addEventListener('click', function() {
+      // Fecha o componente de instalação e balão de conversa
+      closeInstallComponent();
+    });
+  </script>
+</body>
 </html>
