--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
   -->
   <title>Help Me</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
   <style>
     .loading-circle {
       border: 4px solid #f3f3f3;
@@ -135,5 +137,6 @@
       console.log('Aplicativo instalado!', event);
     });
   </script>
+  <script src="./index.js"></script>
 </body>
 </html>
